src/z80asm/z80asm2/t/30-directive/expected/include_11.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/include_11.asm
Assembling t/30-directive/input/include_11.asm...
t/30-directive/input/include_11.asm:1:9: error: Expected filename after INCLUDE
    #include ; no input file
            ^
